# google-custom-search

./: .gitignore  README.md  bousai?lite=true  conf.py  data.json  docs.sh  index.rst  json.txt  main.py  pyproject.toml  setup.py  upload.txt
.github/workflows/: docs.yml  pypi.yml  python-package.yml
docs/: conf.py  google_custom_search.rst  index.html  index.rst  quickstart.md  requirements.txt  search.html
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/google_custom_search/: google_custom_search.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/google_custom_search/: google_custom_search.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/_build/html/google_custom_search/: google_custom_search.html  modules.html
docs/google_custom_search/: modules.rst
docs/source/: conf.py  index.rst
examples/: async_iterator.py  discord.py
google_custom_search/: __init__.py  adapter.py  enums.py  errors.py  object.py  search.py  types.py
google_custom_search.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
